added few features such as forgot password option, search bar option, and edit password option

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -7,6 +7,7 @@
     <title>Task Management App</title>
   </head>
   <body>
+    <h1 style="font-size: 40px; text-align: center; background: linear-gradient(to right, #06ebfc, #ff6105);">Task Management App For JALA Academy</h1><br><br>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
