--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -7,8 +7,11 @@
     <title>Task Management App</title>
   </head>
   <body>
+     <!-- Page header -->
     <h1 style="font-size: 40px; text-align: center; background: linear-gradient(to right, #06ebfc, #ff6105);">Task Management App For JALA Academy</h1><br><br>
+       <!-- Root element for the React app -->
     <div id="root"></div>
+    <!-- Script tag to load the compiled JavaScript module -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
